--- a/contactWidget.html
+++ b/contactWidget.html
@@ -1,6 +1,6 @@
-<style type="text/css">.ltcw {display:none;}</style>
+<style type="text/css">.ltw {display:none;}</style>
 <link rel="stylesheet" href="/css/widget.css">
-<div class="ltcw container-fluid">
+<div class="ltw container-fluid">
 	<form id="LtcwContactWidgetForm" class="form-horizontal">
 		<div id="ltcwErrorMessageWrapper" class="row" style="display: none;">
 			<div class="col-sm-12">
