--- a/template.html
+++ b/template.html
@@ -3,22 +3,77 @@
 				<h3 class="modal-title">Edit Widget Form</h3>
 			</div>
 			<div class="modal-body">
-				<div class="form-group form-group-sm">
-					<label for="ltewBorderType" class="col-sm-2 control-label">Border Type</label>
-					<div class="col-sm-6">
-						<!-- <select name="ltewBorderType" id="ltewBorderType" class="form-control" data-ng-model="modForm.template.formBorderType" data-ng-options="btype.id as btype.name for btype in borderTypes">
-							<option value="">None</option>
-						</select> -->
-						<div class="btn-group btn-group-sm">
-							<label class="btn btn-primary" data-ng-model="modForm.template.formBorderType" uib-btn-radio="btype.id" data-ng-repeat="btype in borderTypes track by btype.id">{{btype.name}}</label>
+				<div class="row">
+					<div class="col-sm-8">
+						<!-- .form-group.form-group-sm>label.col-sm-2.control-label[for=ltewFormWidth]{Form Width}+.col-sm-2>input.form-control#ltewFormWidth[type=number name=ltewFormWidth data-ng-model=modForm.formWidth] -->
+						<div class="form-group form-group-sm">
+							<label for="ltewFormWidth" class="col-sm-4 control-label">Form Width</label>
+							<div class="col-sm-4">
+								<div class="input-group input-group-sm">
+									<input type="number" min="0" class="form-control" id="ltewFormWidth" name="ltewFormWidth" data-ng-model="modForm.formWidth" />
+									<div class="input-group-btn" uib-dropdown="">
+										<button class="btn btn-primary" type="button" uib-dropdown-toggle="">{{modForm.formWidthUnit}} <span class="caret"></span></button>
+										<ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu="">
+											<li></li>
+											<li data-ng-repeat="fwunit in formWidthUnits track by fwunit.id"><a href="#" data-ng-click="changeFormWidthUnit($event, fwunit)">{{fwunit.id}} - {{fwunit.name}}</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="btn-group btn-group-sm"><label for="" class="btn btn-primary" data-ng-model="modForm.formWidthUnit" data-uib-btn-radio="fwunit.id" data-ng-repeat="fwunit in formWidthUnits track by fwunit.id"><span class="show-on-active-inline-block glyphicon glyphicon-ok"></span> {{fwunit.name}} </label></div>
+							</div>
+						</div>
+						<div class="form-group form-group-sm">
+							<label for="ltewBorderType" class="col-sm-2 control-label">Border Type</label>
+							<div class="col-sm-6">
+								<!-- <select name="ltewBorderType" id="ltewBorderType" class="form-control" data-ng-model="modForm.buildObject.formBorderType" data-ng-options="btype.id as btype.name for btype in borderTypes">
+									<option value="">None</option>
+								</select> -->
+								<div class="btn-group btn-group-sm">
+									<label class="btn btn-primary" data-ng-model="modForm.buildObject.formBorderType" data-ng-change="borderTypeChange();" uib-btn-radio="btype.id" data-ng-repeat="btype in borderTypes track by btype.id"><span class="show-on-active-inline-block glyphicon glyphicon-ok"></span> {{btype.name}} </label>
+								</div>
+							</div>
+							<div class="col-sm-4">{{modForm.buildObject.formBorderType}}</div>
+						</div>
+						<!-- <div class="form-group form-group-sm">
+							label.control-label.col-sm-2{Form Width}
+							<div class="btn-group btn-group-sm">
+								<label class="btn btn-primary"></label>
+							</div>
+						</div> -->
+						<div class="form-group form-group-sm" data-ng-disabled-NN="!showBorderRadius">
+							<label for="ltewBorderWidth" class="col-sm-2 control-label">Form Border Radius</label>
+							<div class="col-sm-2">
+								<input type="number" min="0" data-ng-disabled="!showBorderRadius" class="form-control" id="ltewBorderWidth" name="ltewBorderWidth" data-ng-model="modForm.formBorderRadius" />
+							</div>
 						</div>
 					</div>
-					<div class="col-sm-4">{{modForm.template.formBorderType}}</div>
-				</div>
-				<div class="form-group form-group-sm">
-					<label for="ltewBorderWidth" class="col-sm-2 control-label">Border Width</label>
-					<div class="col-sm-2">
-						<input type="number" class="form-control" id="ltewBorderWidth" name="ltewBorderWidth" data-ng-model-N="" />
+					<div class="col-sm-4">
+						<h4>Preview:</h4>
+						<hr />
+						<div class="ltw" style="width:100%;">
+							<div>
+								<div class="panel panel-default lt-widget-border">
+									<div class="panel-heading lt-widget-heading">{{modForm.buildObject.panelTitle}}</div>
+									<div class="panel-body">
+										panel contents
+									</div>
+								</div>
+							</div>
+							<div>
+								<div class="well lt-widget-border">
+									<h4 class="lt-widget-heading">{{modForm.buildObject.panelTitle}}</h4>
+									<div>
+										well content
+									</div>
+								</div>
+							</div>
+							<div>
+								<h4 class="lt-widget-heading">{{modForm.buildObject.panelTitle}}</h4>
+								<div>none content</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
