--- a/contactWidgetBuild.html
+++ b/contactWidgetBuild.html
@@ -1,12 +1,12 @@
 <html>
 <body>
-	<style type="text/css">.ltcw {display:none;}</style>
+	<style type="text/css">.ltw {display:none;}</style>
 	<link rel="stylesheet" href="/css/widget.css">
 	<style type="text/css">
-	.ltcw .form-group .form-control { border-radius: 0px; }
-	.ltcw .btn { border-radius: 0px; }
-	.ltcw .panel { border-radius: 0px; }
-	.ltcw { background-color: #add; padding: 40px; }
+	.ltw .form-group .form-control { border-radius: 0px; }
+	.ltw .btn { border-radius: 0px; }
+	.ltw .panel { border-radius: 0px; }
+	.ltw { background-color: #add; padding: 40px; }
 	</style>
 	<div id="ltWidgetWrapper"></div>
 	<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script> -->
