added paragraph field

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/css/site-bootstrap.css" />
 	<link rel="stylesheet" href="/css/site.css" />
+	<!-- <style type="text/css">.ltw .form-horizontal > .form-group:last-child {margin-bottom: 0;}</style> -->
 </head>
 <body data-ng-app="WidgetBuilder" data-ng-controller="ContactWidgetBuilderController">
 	<nav>
