multipe versions of jquery

--- a/contactWidgetBuild.html
+++ b/contactWidgetBuild.html
@@ -10,8 +10,8 @@
 	</style>
 	<div id="ltWidgetWrapper"></div>
 	<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script> -->
-	<script type="text/javascript" src="/js/lib/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/lib/jquery.placeholder.min.js"></script>
+	<script type="text/javascript" src="/js/lib/jquery-1/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/lib/jquery/jquery.placeholder.min.js"></script>
 	<script type="text/javascript" src="/js/loantek-manual-contact-widget.js"></script>
 	<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script> -->
 	<script type="text/javascript">
