--- a/contactWidget.html
+++ b/contactWidget.html
@@ -178,8 +178,8 @@
 	<div class="testMsg"></div>
 </div>
 <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script> -->
-<script type="text/javascript" src="/js/lib/jquery.min.js"></script>
-<script type="text/javascript" src="/js/lib/jquery.placeholder.min.js"></script>
+<script type="text/javascript" src="/js/lib/jquery-1/jquery.min.js"></script>
+<script type="text/javascript" src="/js/lib/jquery/jquery.placeholder.min.js"></script>
 <script type="text/javascript" src="/js/loantek-manual-contact-widget.js"></script>
 <script type="text/javascript">
 var ltCaptcha = new LoanTekCaptcha();
