--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="/js/lib/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/lib/jquery/jquery.min.js"></script>
 	<!-- <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.min.js"></script> -->
-	<script type="text/javascript" src="/js/lib/jquery.placeholder.min.js"></script>
-	<script type="text/javascript" src="/js/lib/bootstrap.min.js"></script>
-	<script type="text/javascript" src="/js/lib/angular.min.js"></script>
-	<script type="text/javascript" src="/js/lib/angular-animate.min.js"></script>
-	<!-- <script type="text/javascript" src="/js/lib/angular-sanitize.min.js"></script> -->
-	<script type="text/javascript" src="/js/lib/ui-bootstrap-tpls.min.js"></script>
+	<script type="text/javascript" src="/js/lib/jquery/jquery.placeholder.min.js"></script>
+	<script type="text/javascript" src="/js/lib/bootstrap/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/js/lib/angular/angular.min.js"></script>
+	<script type="text/javascript" src="/js/lib/angular/angular-animate.min.js"></script>
+	<!-- <script type="text/javascript" src="/js/lib/angular/angular-sanitize.min.js"></script> -->
+	<script type="text/javascript" src="/js/lib/angular/ui-bootstrap-tpls.min.js"></script>
 
 	<!-- <script type="text/javascript">window.console && console.log('before', $.fn.jquery, 'ltjQuery', ltjQuery);</script> -->
 
-	<script type="text/javascript" src="/js/lib/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/lib/jquery.placeholder.min.js"></script>
+	<script type="text/javascript" src="/js/lib/jquery-1/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/lib/jquery/jquery.placeholder.min.js"></script>
 	<script type="text/javascript" src="/js/loantek-manual-contact-widget.js"></script>
 
 	<!-- <script type="text/javascript">window.console && console.log('after', $.fn.jquery, 'ltjQuery', ltjQuery.fn.jquery);</script> -->
