test to work with visual studio

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 					<ul class="nav navbar-nav">
 						<li><a href="contactWidget.html">contactWidget</a></li>
 						<li><a href="contactWidgetBuild.html">contactWidgetBuild</a></li>
+						<li><a href="widgetTest.html">widgetTest</a></li>
 						<li><a href="">link</a></li>
 					</ul>
 				</div>
