--- a/widgetBuilder01.html
+++ b/widgetBuilder01.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/css/site.css" />
 	<!-- <style type="text/css">.ltw .form-horizontal > .form-group:last-child {margin-bottom: 0;}</style> -->
 </head>
-<body data-ng-app="WidgetBuilder" data-ng-controller="WidgetBuilderController">
+<body data-ng-app="WidgetBuilder" data-ng-controller="ContactWidgetBuilderController">
 	<nav>
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
@@ -116,7 +116,7 @@
 					</div>
 				</div> -->
 				<div class="row">
-					<div data-lt-compile-code="widgetScriptDisplay"></div>
+					<div data-ng-bind-html-NOT-USED="widgetDisplay" data-lt-compile-code="widgetScriptDisplay"></div>
 				</div>
 				<!-- <div class="row">
 					<div id="demoHtml"></div>
@@ -138,20 +138,10 @@
 
 	<script type="text/javascript" src="/js/lib/jquery-1/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/lib/jquery/jquery.placeholder.min.js"></script>
-	<script type="text/javascript" src="/js/common/lt-captcha.js"></script>
-	<script type="text/javascript" src="/js/common/widget-helpers.js"></script>
-	<script type="text/javascript" src="/js/widget/widget.js"></script>
+	<script type="text/javascript" src="/js/loantek-manual-contact-widget.js"></script>
 
 	<!-- <script type="text/javascript">window.console && console.log('after', $.fn.jquery, 'ltjQuery', ltjQuery.fn.jquery);</script> -->
 
-	<script type="text/javascript" src="/js/widget/widget-builder-helpers.js"></script>
-	<script type="text/javascript" src="/js/widget/widget-builder-templates.js"></script>
-	<script type="text/javascript" src="/js/widget/widget-builder-services.js"></script>
-	<script type="text/javascript" src="/js/widget/widget-builder-directives.js"></script>
-	<script type="text/javascript" src="/js/widget/widget-builder.js"></script>
-	<script type="text/javascript">
-		var widgetModelData = {WidgetType: 'ContactWidget'};
-		var wbuilder = new LoanTekWidget.WidgetBuilder(jQuery, widgetModelData);
-	</script>
+	<script type="text/javascript" src="/js/widget-builder.js"></script>
 </body>
 </html>
