--- a/widgetTest.html
+++ b/widgetTest.html
@@ -24,6 +24,9 @@
 		// jQuery no conflict
 		var ltjQuery = ltjQuery || jQuery.noConflict(true);
 
+		// LoanTekWidget helpers
+		var ltHelpers = new LoanTekWidget.helpers(ltjQuery);
+
 		var ltCaptcha;
 		var postDOMFunctions = function () {
 			/*code ran after DOM created*/
@@ -32,7 +35,6 @@
 		var externalValidators = function () {
 			return ltCaptcha.IsValidEntry();
 		};
-		var ltHelpers = new LoanTekWidget.helpers(ltjQuery);
 
 		var ltwBuildObject = {
 			// showBuilderTools: true,
