widget builder working again with new setup.

--- a/index.html
+++ b/index.html
@@ -136,14 +136,15 @@
 
 	<!-- <script type="text/javascript">window.console && console.log('before', $.fn.jquery, 'ltjQuery', ltjQuery);</script> -->
 
-	<script type="text/javascript" src="/js/lib/jquery-1/jquery.min.js"></script>
+	<!-- <script type="text/javascript" src="/js/lib/jquery-1/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/lib/jquery/jquery.placeholder.min.js"></script>
 	<script type="text/javascript" src="/js/common/lt-captcha.js"></script>
 	<script type="text/javascript" src="/js/common/widget-helpers.js"></script>
-	<script type="text/javascript" src="/js/widget/widget.js"></script>
+	<script type="text/javascript" src="/js/widget/widget.js"></script> -->
 
 	<!-- <script type="text/javascript">window.console && console.log('after', $.fn.jquery, 'ltjQuery', ltjQuery.fn.jquery);</script> -->
 
+	<script type="text/javascript" src="/js/common/widget-helpers.js"></script>
 	<script type="text/javascript" src="/js/widget/widget-builder-helpers.js"></script>
 	<script type="text/javascript" src="/js/widget/widget-builder-templates.js"></script>
 	<script type="text/javascript" src="/js/widget/widget-builder-services.js"></script>
