--- a/widgetTest.html
+++ b/widgetTest.html
@@ -38,11 +38,13 @@
 
 		var ltwBuildObject = {
 			// showBuilderTools: true,
+			formBorderType: 'panel',
 			fieldSize: 'sm',
 			panelTitle: 'Contact Us',
 			fields: [
 				{field: 'clientid'}
 				, {field: 'userid'}
+				, {field: 'label', cols: 2, value:'First Name'}
 				, {field: 'firstname', cols: 2}
 				, {field: 'lastname', cols: 6}
 				, {field: 'email'}
