--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/css/site.css" />
 	<!-- <style type="text/css">.ltw .form-horizontal > .form-group:last-child {margin-bottom: 0;}</style> -->
 </head>
-<body data-ng-app="WidgetBuilder" data-ng-controller="WidgetBuilderController">
+<body data-ng-app="WidgetBuilderApp" data-ng-controller="WidgetBuilderController">
 	<nav>
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
