More Edit Form options added.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<div class="panel-body">
 										<div class="form-group form-group-sm">
 											<div class="col-sm-12">
-												<select name="ltprebuiltTemplate" id="ltprebuiltTemplate" class="form-control" data-ng-change="UsePrebuiltForm();" data-ng-model="selectedForm" data-ng-options="pform.name for pform in currentWidget.prebuiltForms"></select>
+												<select name="ltprebuiltTemplate" id="ltprebuiltTemplate" class="form-control" data-ng-change="UsePrebuiltForm();" data-ng-model="selectedForm" data-ng-options="pform.name for pform in widgetObject.prebuiltForms"></select>
 											</div>
 										</div>
 									</div>
