--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	<script type="text/javascript" src="/js/lib/bootstrap/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/lib/angular/angular.min.js"></script>
 	<script type="text/javascript" src="/js/lib/angular/angular-animate.min.js"></script>
-	<!-- <script type="text/javascript" src="/js/lib/angular/angular-sanitize.min.js"></script> -->
+	<script type="text/javascript" src="/js/lib/angular/angular-sanitize.min.js"></script>
 	<script type="text/javascript" src="/js/lib/angular/ui-bootstrap-tpls.min.js"></script>
 
 	<!-- <script type="text/javascript">window.console && console.log('before', $.fn.jquery, 'ltjQuery', ltjQuery);</script> -->
