--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Widget Test</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/css/site-bootstrap.css" />
+	<link rel="stylesheet" href="/css/lib/angular-bootstrap-colorpicker/css/colorpicker.min.css" />
 	<link rel="stylesheet" href="/css/site.css" />
 	<!-- <style type="text/css">.ltw .form-horizontal > .form-group:last-child {margin-bottom: 0;}</style> -->
 </head>
@@ -133,6 +134,7 @@
 	<script type="text/javascript" src="/js/lib/angular/angular-animate.min.js"></script>
 	<script type="text/javascript" src="/js/lib/angular/angular-sanitize.min.js"></script>
 	<script type="text/javascript" src="/js/lib/angular/ui-bootstrap-tpls.min.js"></script>
+	<script type="text/javascript" src="/js/lib/angular-bootstrap-colorpicker/bootstrap-colorpicker-module.min.js"></script>
 
 	<!-- <script type="text/javascript">window.console && console.log('before', $.fn.jquery, 'ltjQuery', ltjQuery);</script> -->
 
