modal to edit each field created

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 									</div>
 								</div>
 							</div>
+							<!-- <pre style="white-space: pre-wrap;">{{currentForm}}</pre> -->
 							<div class="panel panel-default">
 								<div class="panel-heading" data-ng-click="isCollapsedSaved = !isCollapsedSaved">
 									<h3 class="panel-title">Saved Widgets<span class="glyphicon pull-right" data-ng-class="isCollapsedSaved &amp;&amp; 'glyphicon-chevron-right' || 'glyphicon-chevron-down'"></span></h3>
